--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo cp terraform /usr/local/bin
+            sudo curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+            sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+            sudo apt-get update && sudo apt-get install terraform
+            # sudo cp terraform /usr/local/bin
             sudo apt-get update
             sudo apt install gettext-base moreutils -y
 
