--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,7 @@ jobs:
           command: |
             sudo curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
             sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-            sudo apt-get update && sudo apt-get install terraform
-            # sudo cp terraform /usr/local/bin
+            sudo apt-get update && sudo apt-get install terraform            
             sudo apt-get update
             sudo apt install gettext-base moreutils -y
 
@@ -49,7 +48,7 @@ jobs:
       - run:                  
           name: Terraform Validate & Format
           command: |
-            terraform init -upgrade
+            terraform init
             terraform validate
 
       - run:                  
@@ -71,7 +70,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-                  sudo cp terraform /usr/local/bin
+                  sudo curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+                  sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+                  sudo apt-get update && sudo apt-get install terraform
                   sudo apt-get update
                   sudo apt install gettext-base moreutils -y
       - run:
