--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,11 +70,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-                  sudo curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-                  sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-                  sudo apt-get update && sudo apt-get install terraform
-                  sudo apt-get update
-                  sudo apt install gettext-base moreutils -y
+              sudo curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+              sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+              sudo apt-get update && sudo apt-get install terraform            
+              sudo apt-get update
+              sudo apt install gettext-base moreutils -y
       - run:
           name: Fill out template variables in yaml files
           command: |
@@ -100,7 +100,7 @@ jobs:
             echo "Continue to destroy-Hurray"
             terraform init
             # terraform destroy --auto-approve  -target kubernetes_namespace.example.id
-            # terraform destroy --auto-approve
+            terraform destroy --auto-approve
 
 workflows:
   deploy_test_infra:
