checked the circleci file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,12 +62,12 @@ jobs:
             echo "credentials \"app.terraform.io\" {token =
             \"$TERRAFORM_TOKEN\"}" > $HOME/.terraformrc
           name: Create .terraformrc file locally
-      - run:
-          name: Fill out template variables in yaml files
-          command: |
-            export RES_NAME=${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
-            export PR_NUMBER=$(echo "pr${CIRCLE_PULL_REQUEST##*/}")
-            envsubst < kubernetes.tf | sponge kubernetes.tf
+      # - run:
+      #     name: Fill out template variables in yaml files
+      #     command: |
+      #       export RES_NAME=${PR_NUMBER}-${CIRCLE_PROJECT_REPONAME}
+      #       export PR_NUMBER=$(echo "pr${CIRCLE_PULL_REQUEST##*/}")
+      #       envsubst < kubernetes.tf | sponge kubernetes.tf
       - run:
           name: Terraform Destroy
           command: |
