--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ aliases:
       name: Install dependencies
       command: |
         mkdir -p artifacts
-        sudo -i
+        # sudo -i
         apt-get -y -qq update
         apt-get install -y awscli
         curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
