--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ aliases:
     run:
       name: Install dependencies
       command: |
-        mkdir -p artifacts
+        # mkdir -p artifacts
         sudo -i
         apt-get -y -qq update
         apt-get install -y awscli
@@ -35,10 +35,10 @@ jobs:
       - checkout
       - *show-current-branch-name
       - *install-dependencies
-      - run:
-          name: Copy Infrastructure Folder
-          command: |
-            cp -r infrastructure artifacts/infrastructure
+      # - run:
+      #     name: Copy Infrastructure Folder
+      #     command: |
+      #       cp -r infrastructure artifacts/infrastructure
       - run:
           name: Create .terraformrc file locally
           command: >-
@@ -59,8 +59,8 @@ jobs:
             terraform apply --auto-approve
       - persist_to_workspace:
           root: ./
-          paths:
-            - artifacts
+          # paths:
+          #   - artifacts
 
   terraform-destroy:
     executor: terraform-executor
